Closed Bug 621273 Opened 14 years ago Closed 14 years ago

Internal URLs show up as results after RSS feed preview

Categories

(Firefox :: Address Bar, defect)

x86
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Firefox 4.0b11
Tracking Status
blocking2.0 --- final+

People

(Reporter: c.ascheberg, Assigned: mak)

References

()

Details

(Keywords: regression, Whiteboard: [softblocker][4b10][fx4-fixed-bugday])

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows NT 6.0; rv:2.0b9pre) Gecko/20101223 Firefox/4.0b9pre Build Identifier: Mozilla/5.0 (Windows NT 6.0; rv:2.0b9pre) Gecko/20101223 Firefox/4.0b9pre See STR below. This is a regression: works: win32 2010-12-15-03-mozilla-central f11f7ed625ba broken: win32 2010-12-16-03-mozilla-central a5413c3c1013 http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=f11f7ed625ba&tochange=a5413c3c1013 Reproducible: Always Steps to Reproduce: (you might start with a new profile) 1. type "add" into location bar (no results with clean profile) 2. open RSS feed in preview, for example given URL 3. type "add" into location bar again Actual Results: These two URL show up as results: http://add.my.yahoo.com/rss?url=%s http://www.google.com/ig/add?feedurl=%s Expected Results: Those URL should not be shown, because they were not visited.
Keywords: regression
Version: unspecified → Trunk
Confirmed. Works: http://hg.mozilla.org/mozilla-central/rev/e435c9812855 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b9pre) Gecko/20101215 Firefox/4.0b9pre ID:20101215174043 Fails: http://hg.mozilla.org/mozilla-central/rev/cd62a8afc52e Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b9pre) Gecko/20101215 Firefox/4.0b9pre ID:20101215204205 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e435c9812855&tochange=cd62a8afc52e
Linux too http://hg.mozilla.org/mozilla-central/rev/ef42c524718f Mozilla/5.0 (X11; Linux i686; rv:2.0b9pre) Gecko/20101223 Firefox/4.0b9pre ID:20101223030401
OS: Windows Vista → All
(In reply to comment #1) How do you find those close regression ranges? Are there still hourly builds or so for that date?
OS: All → Windows Vista
(In reply to comment #3) > (In reply to comment #1) > > How do you find those close regression ranges? Are there still hourly builds or > so for that date? I cached hourly build on local HDD. And you can find archived hourly on http://hourly-archive.localgho.st/hourly-archive2/mozilla-central-win32/
OS: Windows Vista → All
Guess we need a Range on Places Branch, no?
In local build Build from af7e6f7cbf16 : fails Build from 2a7a3641d67d : fails Build from 6617dcb0d48a : fails Build from d65c65ef13a4 : works Build from 20311c05703e : works Build from b198eca4d183 : works Build from 4626f19fa27e : works So, this is regressen by Bug 599973 - Don't use steps for async favicons
Blocks: 599973
Status: UNCONFIRMED → NEW
blocking2.0: --- → ?
Ever confirmed: true
And also Build from 999385f355a3 : fails
Thanks for digging into this and getting a regression range!
blocking2.0: ? → final+
Assignee: nobody → mak77
Status: NEW → ASSIGNED
those urls are there because we fetch icons for the default web handlers for RSS feeds (the feed preview page uses those icons for google and yahoo). I will fix this bug along with bug 621274 since they are related.
Depends on: 621274
Flags: in-testsuite?
Whiteboard: [needs bug 621274]
Whiteboard: [needs bug 621274] → [needs bug 621274][softblocker]
Flags: in-testsuite? → in-testsuite+
Whiteboard: [needs bug 621274][softblocker] → [fixed by bug 621274][softblocker][fixed-in-places]
Bug 621274 is foxed now.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 4.0b10
I can still reproduce this using: Mozilla/5.0 (X11; Linux i686; rv:2.0b10pre) Gecko/20110121 Firefox/4.0b10pre - and - Mozilla/5.0 (X11; Linux i686; rv:2.0b10) Gecko/20100101 Firefox/4.0b10 (build1)
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Whiteboard: [fixed by bug 621274][softblocker][fixed-in-places] → [fixed by bug 621274][softblocker][fixed-in-places][4b10]
Thanks for looking again at this, I was pretty sire to have tested this case but looks like it slipped out. Now we correctly set hidden=1 but we let frecency to the default value (-1), autocomplete is now basing its behavior on frecency rather than hidden, so we consider these entries "to-be-recalculated". Next frecency recalculation will fix this but in the meanwhile the uris are showing up. I'll increase the strictness of the fix in bug 621274 to also set frecency to 0.
Shawn, I'd directly go to central with this, should not bitrot anything we could put on the branch.
Attachment #506412 - Flags: review?(sdwilsh)
Whiteboard: [fixed by bug 621274][softblocker][fixed-in-places][4b10] → [softblocker][4b10]
Comment on attachment 506412 [details] [diff] [review] patch v1.0 (checked-in) r=sdwilsh
Attachment #506412 - Flags: review?(sdwilsh) → review+
Attachment #506412 - Attachment description: patch v1.0 → patch v1.0 (checked-in)
Status: REOPENED → RESOLVED
Closed: 14 years ago14 years ago
Resolution: --- → FIXED
Target Milestone: Firefox 4.0b10 → Firefox 4.0b11
Verified fixed on Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b12pre) Gecko/20110204 Firefox/4.0b12pre
Status: RESOLVED → VERIFIED
Whiteboard: [softblocker][4b10] → [softblocker][4b10][fx4-fixed-bugday]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: