Bug 621273 - Internal URLs show up as results after RSS feed preview. r=sdwilsh a=blocker